samples/_failures_safe/1761325773_6e0d06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ec09ce3.c: In function ‘main’:
./samples/SAFE/__tmp_2ec09ce3.c:179:9: error: expected expression at end of input
  179 |         } else if (
      |         ^
./samples/SAFE/__tmp_2ec09ce3.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ec09ce3.c:179:9: error: expected declaration or statement at end of input
